Support jdk11-ea