@@ -1,4 +1,4 @@
 #!/bin/sh
 cd ./otoroshi
-export JAVA_OPTS="$JAVA_OPTS -XX:+IgnoreUnrecognizedVMOptions --add-modules=java.xml.bind --illegal-access=warn"
+export JAVA_OPTS="$JAVA_OPTS -XX:+IgnoreUnrecognizedVMOptions --illegal-access=warn"
 ./bin/otoroshi -Dhttp.port=8080 "$@"
